spade-tests/src/snapshots/spade_tests__integration__trait_tests__instantiating_entity_methods_fails_gracefully.snap
---
source: spade-tests/src/integration.rs
---
struct X {}

impl X {
    entity a(self) -> bool {true}
}

fn t(x: X) -> bool {
    x.a()
}


error: Entity methods can not be instantiated
  ┌─ testinput:8:5
  │
4 │     entity a(self) -> bool {true}
  │     ------ This is an entity
  ·
8 │     x.a()
  │     ^^^^^
  │
  = note: This restriction will be lifted in the future


